<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
  <string name="app_name">Module Metadata</string>

  <!-- Module names go here -->
  <string name="module_adbd">ADBd</string>
  <string name="module_adservices">Ad Services</string>
  <string name="module_adservices_tvp">Ad Services TVP</string>
  <string name="module_appsearch">AppSearch</string>
  <string name="module_art">Android Runtime</string>
  <string name="module_bluetooth">Bluetooth</string>
  <string name="module_captiveportallogin">Captive Portal Login</string>
  <string name="module_cellbroadcast">Cell Broadcast</string>
  <string name="module_conscrypt">Conscrypt</string>
  <string name="module_documentsui">Documents UI</string>
  <string name="module_ext_services">Android Services</string>
  <string name="module_ext_services_apex">Android Services (APEX)</string>
  <string name="module_ipsec">IPSec</string>
  <string name="module_libs">Dynamic Common Libraries</string>
  <string name="module_media">Media</string>
  <string name="module_media_swcodec">Media Software Codec</string>
  <string name="module_mediaprovider">Media Provider</string>
  <string name="module_metadata">Module Metadata</string>
  <string name="module_networkpermissionconfig">Network Permission Configuration</string>
  <string name="module_networkstack">Network Stack</string>
  <string name="module_neuralnetworks">Neural Networks API</string>
  <string name="module_ondevicepersonalization">On Device Personalization</string>
  <string name="module_os_statsd">Statsd</string>
  <string name="module_permission">Permission</string>
  <string name="module_permissioncontroller">Permission Controller</string>
  <string name="module_resolv">DNS Resolver</string>
  <string name="module_scheduling">Device Scheduling</string>
  <string name="module_sdkext">SDK Extensions</string>
  <string name="module_telemetry">Telemetry TVP</string>
  <string name="module_tethering">Tethering</string>
  <string name="module_tzdata">Time zone data</string>
  <string name="module_uwb">UWB</string>
  <string name="module_wifi">WiFi</string>
  <string name="train_name">Main components</string>
</resources>
